@@ -3,14 +3,18 @@ package nl.tudelft.sem.template.example.domain.controllers;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Optional;
 import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
 import nl.tudelft.sem.template.api.PaperApi;
+import nl.tudelft.sem.template.example.domain.builder.CheckSubject;
+import nl.tudelft.sem.template.example.domain.builder.CheckSubjectBuilder;
 import nl.tudelft.sem.template.example.domain.models.PreferenceEntity;
 import nl.tudelft.sem.template.example.domain.responses.PaperResponse;
 import nl.tudelft.sem.template.example.domain.services.PaperService;
@@ -18,6 +22,7 @@ import nl.tudelft.sem.template.example.domain.services.ReviewService;
 import nl.tudelft.sem.template.example.domain.services.ReviewerPreferencesService;
 import nl.tudelft.sem.template.example.domain.services.UserService;
 import nl.tudelft.sem.template.example.domain.util.NullChecks;
+import nl.tudelft.sem.template.example.domain.validator.ChainManager;
 import nl.tudelft.sem.template.model.Comment;
 import nl.tudelft.sem.template.model.Paper;
 import nl.tudelft.sem.template.model.Review;
@@ -37,12 +42,16 @@ public class PaperController implements PaperApi {
     private final ReviewerPreferencesService reviewerPreferencesService;
     private final ReviewService reviewService;
 
+    private final ChainManager chainManager;
+
     PaperController(UserService userService, PaperService paperService,
-                    ReviewerPreferencesService reviewerPreferencesService, ReviewService reviewService) {
+                    ReviewerPreferencesService reviewerPreferencesService,
+                    ReviewService reviewService, ChainManager chainManager) {
         this.userService = userService;
         this.paperService = paperService;
         this.reviewerPreferencesService = reviewerPreferencesService;
         this.reviewService = reviewService;
+        this.chainManager = chainManager;
     }
 
     /**
@@ -59,41 +68,46 @@ public class PaperController implements PaperApi {
      */
     @Override
     public ResponseEntity<List<Review>> paperGetPaperReviewsGet(Integer paperId, Integer userId) {
-        if (NullChecks.nullCheck(paperId, userId)) {
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+
+        CheckSubjectBuilder builder = new CheckSubjectBuilder();
+        builder.setInputParameters(new ArrayList<>(Arrays.asList(paperId, userId)));
+        builder.setUserId(userId);
+        builder.setPaperIds(new ArrayList<>(Collections.singletonList(paperId)));
+        CheckSubject checkSubject = builder.build();
+        ResponseEntity<List<Review>> validatorStatus = chainManager.evaluate(checkSubject);
+        if (validatorStatus != null) {
+            return validatorStatus;
         }
-        if (!userService.validateUser(userId)) {
-            return new ResponseEntity<>(HttpStatus.UNAUTHORIZED);
-        }
+
         return new ResponseEntity<>(reviewService.findAllReviewsByPaperId(paperId), HttpStatus.OK);
     }
 
     @Override
     public ResponseEntity<List<Paper>> paperGetPaperByIDGet(
-            @NotNull @Parameter(name = "PaperId", description = "The id for which the paper should be reviewed.",
-                    required = true, in = ParameterIn.QUERY)
-            @Valid @RequestParam(value = "PaperId") Integer paperId,
-            @NotNull @Parameter(name = "userId", description = "The ID of the user, used for authorization",
-                    required = true, in = ParameterIn.QUERY)
-            @Valid @RequestParam(value = "userId") Integer userId
+        @NotNull @Parameter(name = "PaperId", description = "The id for which the paper should be reviewed.",
+            required = true, in = ParameterIn.QUERY)
+        @Valid @RequestParam(value = "PaperId") Integer paperId,
+        @NotNull @Parameter(name = "userId", description = "The ID of the user, used for authorization",
+            required = true, in = ParameterIn.QUERY)
+        @Valid @RequestParam(value = "userId") Integer userId
     ) {
-        if (NullChecks.nullCheck(paperId, userId)) {
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
-        }
-        try {
-            boolean isUserValid = userService.validateUser(userId);
-            if (!isUserValid) {
-                return new ResponseEntity<>(HttpStatus.UNAUTHORIZED);
-            }
 
-            Optional<Paper> foundPaper = paperService.getPaperObjectWithId(paperId);
-            return foundPaper.map(paper -> new ResponseEntity<>(List.of(paper), HttpStatus.OK))
-                    .orElseGet(() -> new ResponseEntity<>(HttpStatus.NOT_FOUND));
+        CheckSubjectBuilder builder = new CheckSubjectBuilder();
+        builder.setInputParameters(new ArrayList<>(Arrays.asList(paperId, userId)));
+        builder.setUserId(userId);
+        builder.setPaperIds(new ArrayList<>(Collections.singletonList(paperId)));
 
-        } catch (Exception e) {
-            e.printStackTrace();
-            return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+        CheckSubject checkSubject = builder.build();
+        ResponseEntity<List<Paper>> validatorStatus = chainManager.evaluate(checkSubject);
+        if (validatorStatus != null) {
+            return validatorStatus;
         }
+
+        Optional<Paper> foundPaper = paperService.getPaperObjectWithId(paperId);
+        if (foundPaper.isEmpty()) {
+            throw new RuntimeException("foundPaper should not be empty at this point due to Validator chain");
+        }
+        return new ResponseEntity<>(List.of(foundPaper.get()), HttpStatus.OK);
     }
 
     /**
@@ -108,23 +122,26 @@ public class PaperController implements PaperApi {
      */
     @Override
     public ResponseEntity<List<Comment>> paperGetPaperCommentsGet(
-            @NotNull @Parameter(name = "paperID", description = "The ID of the paper we want to view the title and abstract",
-                    required = true, in = ParameterIn.QUERY)
-            @Valid @RequestParam(value = "paperID") Integer paperId,
-            @NotNull @Parameter(name = "userID", description = "The ID of the user, used for authorization",
-                    required = true, in = ParameterIn.QUERY)
-            @Valid @RequestParam(value = "userID") Integer userId
+        @NotNull @Parameter(name = "paperID", description = "The ID of the paper we want to view the title and abstract",
+            required = true, in = ParameterIn.QUERY)
+        @Valid @RequestParam(value = "paperID") Integer paperId,
+        @NotNull @Parameter(name = "userID", description = "The ID of the user, used for authorization",
+            required = true, in = ParameterIn.QUERY)
+        @Valid @RequestParam(value = "userID") Integer userId
     ) {
-        if (NullChecks.nullCheck(paperId, userId)) {
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+
+        CheckSubjectBuilder builder = new CheckSubjectBuilder();
+        builder.setInputParameters(new ArrayList<>(Arrays.asList(paperId, userId)));
+        builder.setUserId(userId);
+        builder.setPaperIds(new ArrayList<>(Collections.singletonList(paperId)));
+        CheckSubject checkSubject = builder.build();
+        ResponseEntity<List<Comment>> validatorStatus = chainManager.evaluate(checkSubject);
+
+        if (validatorStatus != null) {
+            return validatorStatus;
         }
-        if (!userService.validateUser(userId)) {
-            return new ResponseEntity<>(HttpStatus.UNAUTHORIZED);
-        }
+
         List<Comment> comments = paperService.paperGetPaperCommentsGet(paperId);
-        if (comments.isEmpty()) {
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
-        }
         return new ResponseEntity<>(comments, HttpStatus.OK);
     }
 
@@ -137,40 +154,44 @@ public class PaperController implements PaperApi {
      */
     @Override
     public ResponseEntity<String> paperGetTitleAndAbstractGet(
-            @NotNull @Parameter(name = "paperID", description = "The ID of the paper we want to view the title and abstract",
-                    required = true, in = ParameterIn.QUERY)
-            @Valid @RequestParam(value = "paperID") Integer paperId,
-            @NotNull @Parameter(name = "userID", description = "The ID of the user, used for authorization",
-                    required = true, in = ParameterIn.QUERY)
-            @Valid @RequestParam(value = "userID") Integer userId
+        @NotNull @Parameter(name = "paperID", description = "The ID of the paper we want to view the title and abstract",
+            required = true, in = ParameterIn.QUERY)
+        @Valid @RequestParam(value = "paperID") Integer paperId,
+        @NotNull @Parameter(name = "userID", description = "The ID of the user, used for authorization",
+            required = true, in = ParameterIn.QUERY)
+        @Valid @RequestParam(value = "userID") Integer userId
     ) {
-        if (NullChecks.nullCheck(paperId, userId)) {
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+
+        CheckSubjectBuilder builder = new CheckSubjectBuilder();
+        builder.setInputParameters(new ArrayList<>(Arrays.asList(paperId, userId)));
+        builder.setUserId(userId);
+        builder.setPaperIds(new ArrayList<>(Collections.singletonList(paperId)));
+
+        CheckSubject checkSubject = builder.build();
+        ResponseEntity<String> validatorStatus = chainManager.evaluate(checkSubject);
+
+        if (validatorStatus != null) {
+            return validatorStatus;
         }
+
+
+        Optional<PaperResponse> foundPaper = paperService.getPaperObjectFromSubmissions(paperId, new RestTemplate());
+        if (foundPaper.isEmpty()) {
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        }
+
+        Map<String, Object> responseMap = new HashMap<>();
+        responseMap.put("title", foundPaper.get().getTitle());
+        responseMap.put("abstract", foundPaper.get().getAbstract());
+
+        ObjectMapper objectMapper = new ObjectMapper();
+        String response = null;
         try {
-            boolean isUserValid = userService.validateUser(userId);
-            if (!isUserValid) {
-                return new ResponseEntity<>(HttpStatus.UNAUTHORIZED);
-            }
-
-            Optional<PaperResponse> foundPaper = paperService.getPaperObjectFromSubmissions(paperId, new RestTemplate());
-            if (foundPaper.isEmpty()) {
-                return new ResponseEntity<>(HttpStatus.NOT_FOUND);
-            }
-
-            Map<String, Object> responseMap = new HashMap<>();
-            responseMap.put("title", foundPaper.get().getTitle());
-            responseMap.put("abstract", foundPaper.get().getAbstract());
-
-            ObjectMapper objectMapper = new ObjectMapper();
-            String response = objectMapper.writeValueAsString(responseMap);
-            return new ResponseEntity<>(response, HttpStatus.OK);
-
+            response = objectMapper.writeValueAsString(responseMap);
         } catch (Exception e) {
-            e.printStackTrace();
             return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
         }
-
+        return new ResponseEntity<>(response, HttpStatus.OK);
 
     }
 
@@ -187,39 +208,45 @@ public class PaperController implements PaperApi {
      */
     @Override
     public ResponseEntity<List<Paper>> paperGetAllPapersForIDGet(@NotNull @Parameter(name = "paperID", description =
-            "The ID of the paper we want to see the reviewer preferences for", required = true,
-            in = ParameterIn.QUERY) @Valid @RequestParam(value = "paperID") Integer reviewerId) {
-        if (NullChecks.nullCheck(reviewerId)) {
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+        "The ID of the paper we want to see the reviewer preferences for", required = true,
+        in = ParameterIn.QUERY) @Valid @RequestParam(value = "paperID") Integer reviewerId) {
+
+        CheckSubjectBuilder builder = new CheckSubjectBuilder();
+        builder.setInputParameters(new ArrayList<>(Collections.singletonList(reviewerId)));
+        builder.setUserId(reviewerId);
+        if (reviewerId != null) {
+            builder.setPaperIds(reviewService.findAllPapersByReviewerId(reviewerId));
         }
-        if (!userService.validateUser(reviewerId)) {
-            return new ResponseEntity<>(HttpStatus.UNAUTHORIZED);
+
+        CheckSubject checkSubject = builder.build();
+        ResponseEntity<List<Paper>> validatorStatus = chainManager.evaluate(checkSubject);
+        if (validatorStatus != null) {
+            return validatorStatus;
         }
+
         List<Paper> papers = paperService.findAllPapersForIdList(reviewService.findAllPapersByReviewerId(reviewerId));
-        if (papers == null) {
-            return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
-        }
-        if (papers.isEmpty()) {
-            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
-        }
         return new ResponseEntity<>(papers, HttpStatus.OK);
     }
 
     @Override
     public ResponseEntity<List<ReviewerPreferences>> paperGetPreferencesByPaperGet(
-            @NotNull @Parameter(name = "paperID", description =
-                    "The ID of the paper we want to see the reviewer preferences for",
-                    required = true, in = ParameterIn.QUERY) @Valid @RequestParam(value = "paperID") Integer paperId,
-            @NotNull @Parameter(name = "userID", description = "The ID of the user, used for authorization",
-                    required = true, in = ParameterIn.QUERY) @Valid @RequestParam(value = "userID") Integer userId
+        @NotNull @Parameter(name = "paperID", description =
+            "The ID of the paper we want to see the reviewer preferences for",
+            required = true, in = ParameterIn.QUERY) @Valid @RequestParam(value = "paperID") Integer paperId,
+        @NotNull @Parameter(name = "userID", description = "The ID of the user, used for authorization",
+            required = true, in = ParameterIn.QUERY) @Valid @RequestParam(value = "userID") Integer userId
     ) {
-        if (NullChecks.nullCheck(paperId, userId)) {
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+        CheckSubjectBuilder builder = new CheckSubjectBuilder();
+        builder.setInputParameters(new ArrayList<>(Arrays.asList(paperId, userId)));
+        builder.setUserId(userId);
+        builder.setPaperIds(new ArrayList<>(Collections.singletonList(paperId)));
+
+        CheckSubject checkSubject = builder.build();
+        ResponseEntity<List<ReviewerPreferences>> validatorStatus = chainManager.evaluate(checkSubject);
+        if (validatorStatus != null) {
+            return validatorStatus;
         }
-        boolean isUserValid = userService.validateUser(userId);
-        if (!isUserValid) {
-            return new ResponseEntity<>(HttpStatus.UNAUTHORIZED);
-        }
+
         List<ReviewerPreferences> prefs = reviewerPreferencesService.getPreferencesForPaper(paperId);
         return new ResponseEntity<>(prefs, HttpStatus.ACCEPTED);
     }
@@ -239,24 +266,27 @@ public class PaperController implements PaperApi {
      */
     @Override
     public ResponseEntity<Void> paperUpdatePaperStatusPut(
-            @NotNull @Parameter(name = "paperID", description = "The ID of the paper we want to change the status for",
-                    required = true, in = ParameterIn.QUERY) @Valid @RequestParam(value = "paperID") Integer paperId,
-            @Parameter(name = "status", description = "The new status of the paper. Can be 'Unresolved', 'Accepted' "
-                    + "or 'Rejected'", required = true) String status,
-            @NotNull @Parameter(name = "userID", description = "The ID of the user, used for authorization",
-                    required = true, in = ParameterIn.QUERY) @Valid @RequestParam(value = "userID") Integer userId
+        @NotNull @Parameter(name = "paperID", description = "The ID of the paper we want to change the status for",
+            required = true, in = ParameterIn.QUERY) @Valid @RequestParam(value = "paperID") Integer paperId,
+        @Parameter(name = "status", description = "The new status of the paper. Can be 'Unresolved', 'Accepted' "
+            + "or 'Rejected'", required = true) String status,
+        @NotNull @Parameter(name = "userID", description = "The ID of the user, used for authorization",
+            required = true, in = ParameterIn.QUERY) @Valid @RequestParam(value = "userID") Integer userId
     ) {
-        if (NullChecks.nullCheck(paperId, userId)) {
-            return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
-        }
-        if (status == null) {
-            return new ResponseEntity<>(HttpStatus.UNAUTHORIZED);
-        }
-        if (!paperService.isExistingPaper(paperId)) {
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
-        }
-        if (!(status.equals("Unresolved") || status.equals("Accepted") || status.equals("Rejected"))) {
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+
+        CheckSubjectBuilder builder = new CheckSubjectBuilder();
+        builder.setInputParameters(new ArrayList<>(Arrays.asList(paperId, userId, status)));
+        builder.setUserId(userId);
+        builder.setPaperIds(new ArrayList<>(Collections.singletonList(paperId)));
+        builder.setEnumValue(status);
+        builder.setGoodEnumValues(List.of("Unresolved", "Accepted", "Rejected"));
+
+        CheckSubject checkSubject = builder.build();
+
+        ResponseEntity<Void> responseStatus = chainManager.evaluate(checkSubject);
+
+        if (responseStatus != null) {
+            return responseStatus;
         }
 
         boolean success = paperService.paperUpdatePaperStatusPut(paperId, status);
@@ -279,31 +309,32 @@ public class PaperController implements PaperApi {
      */
 
     public ResponseEntity<Void> paperPostPreferenceScorePost(
-            @NotNull @Parameter(name = "reviewer_id", description = "The id of the reviewer", required = true,
-                    in = ParameterIn.QUERY) @Valid @RequestParam(value = "reviewer_id") Integer reviewerId,
-            @NotNull @Parameter(name = "paper_id", description = "The id of the paper", required = true,
-                    in = ParameterIn.QUERY) @Valid @RequestParam(value = "paper_id") Integer paperId,
-            @NotNull @Parameter(name = "preference", description = "The preference score", required = true,
-                    in = ParameterIn.QUERY) @Valid @RequestParam(value = "preference") String preference
+        @NotNull
+        @Parameter(name = "reviewer_id", description = "The id of the reviewer", required = true, in = ParameterIn.QUERY)
+        @Valid @RequestParam(value = "reviewer_id", required = true) Integer reviewerId,
+        @NotNull @Parameter(name = "paper_id", description = "The id of the paper", required = true, in = ParameterIn.QUERY)
+        @Valid @RequestParam(value = "paper_id", required = true) Integer paperId,
+        @NotNull
+        @Parameter(name = "preference", description = "The preference score", required = true, in = ParameterIn.QUERY)
+        @Valid @RequestParam(value = "preference", required = true) String preference
     ) {
-        if (NullChecks.nullCheck(reviewerId, paperId, preference)) {
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
-        }
-        if (!Objects.equals(preference, "Can review") && !Objects.equals(preference, "Cannot review")
-            && !Objects.equals(preference, "Neutral")) {
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
-        }
 
-        if (!userService.validateUser(reviewerId)) {
-            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
-        }
-        boolean doesPaperExist = paperService.isExistingPaper(paperId);
-        if (!doesPaperExist) {
-            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        CheckSubjectBuilder builder = new CheckSubjectBuilder();
+        builder.setInputParameters(new ArrayList<>(Arrays.asList(reviewerId, paperId, preference)));
+        builder.setUserId(reviewerId);
+        builder.setEnumValue(preference);
+        builder.setGoodEnumValues(List.of("Can review", "Cannot review", "Neutral"));
+        builder.setPaperIds(new ArrayList<>(Collections.singletonList(paperId)));
+
+        CheckSubject checkSubject = builder.build();
+        ResponseEntity<Void> responseStatus = chainManager.evaluate(checkSubject);
+
+        if (responseStatus != null) {
+            return responseStatus;
         }
 
         PreferenceEntity preferenceEntity = new PreferenceEntity(
-                reviewerId, paperId, PreferenceEntity.changeStringToEnumValue(preference)
+            reviewerId, paperId, PreferenceEntity.changeStringToEnumValue(preference)
         );
         PreferenceEntity saved = reviewerPreferencesService.saveReviewerPreference(preferenceEntity);
 
